src/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Aadhar_Number__c</fullName>
        <label>Aadhar Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <formula>TEXT(Contact__r.Salutation) + &apos; &apos; + Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <label>Session Name</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Aadhar_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Session_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATT#{0000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_Format_check</fullName>
        <active>true</active>
        <errorConditionFormula>REGEX( Email__c , &quot;[a-zA-Z0-9._]+@[a-zA-Z0-9.]&quot;)</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Email format is not valid</errorMessage>
    </validationRules>
</CustomObject>