src/objects/Attendee__c/validationRules/Email_Format_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Format_check</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX( Email__c , &quot;[a-zA-Z0-9._]+@[a-zA-Z0-9.]&quot;)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email format is not valid</errorMessage>
</ValidationRule>